alignment of header in editor fixing

--- a/less/widgets/widget-navigation.less
+++ b/less/widgets/widget-navigation.less
@@ -24,6 +24,12 @@
         position: absolute;
         right: 0;
     }
+    @media @mobile {
+        position: relative;
+        display: inline-block;
+        float: right;
+        top: 0;
+    }
 }
 
 // Folder Item Parent: Gives arrow
