--- a/less/widgets/widgets-all.less
+++ b/less/widgets/widgets-all.less
@@ -81,7 +81,7 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    width:100%;
+    width: 100%;
     // Layout
     padding: 10px 2%;
 
@@ -91,9 +91,10 @@
     }
 
     @media @mobile {
-        padding: 20px 16% 15px 4%;
+        padding: 20px 2% 15px 4%;
     }
 }
+
 .footer-wrapper {
     .justify-content(space-between);
 
